--- a/eleso/public/index.html
+++ b/eleso/public/index.html
@@ -24,6 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap');
+      </style>
     <script src="https://kit.fontawesome.com/25b31713ba.js" crossorigin="anonymous"></script>
     <title>React App</title>
   </head>
